--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="image/png" sizes="32x32" rel="icon" href="/favicon.png">
+    <link type="image/png" sizes="32x32" rel="icon" href="https://pxl2a11.github.io/favicon.png">
     <title>Генератор случайных чисел и цветов</title>
     <style>
         /* CSS стили для оформления */
