--- a/folder/index.html
+++ b/folder/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Услуги по очистке - Базовый Макет</title>
+    <title>Услуги по очистке</title>
     <!-- Подключение Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Подключение шрифта Inter (рекомендуется для Tailwind) -->
