--- a/folder/index.html
+++ b/folder/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Услуги по очистке</title>
+    <title>Услуги по очистке - Базовый Макет</title>
     <!-- Подключение Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Подключение шрифта Inter (рекомендуется для Tailwind) -->
@@ -57,9 +57,10 @@
             <p class="text-lg md:text-xl mb-8 max-w-3xl mx-auto">
                 Быстро, качественно и надежно. Мы решаем любые проблемы с вашей канализацией.
             </p>
-            <button class="gradient-button text-white font-bold py-3 px-8 rounded-full shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-blue-300">
-                Заказать услугу
-            </button>
+            <!-- Кнопка "Позвонить" -->
+            <a href="tel:+78121234567" class="gradient-button text-white font-bold py-3 px-8 rounded-full shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-blue-300">
+                Позвонить
+            </a>
         </div>
     </section>
 
@@ -114,31 +115,18 @@
         </div>
     </section>
 
-    <!-- Секция Контакты и Форма -->
-    <section id="contact" class="py-16 md:py-24 bg-white">
+    <!-- Секция Контакты (Позвонить нам) -->
+    <section id="contact" class="py-16 md:py-24 bg-blue-600 text-white text-center rounded-lg shadow-lg">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-900">Свяжитесь с нами</h2>
-            <div class="max-w-2xl mx-auto bg-gray-50 p-8 rounded-lg shadow-md">
-                <form>
-                    <div class="mb-6">
-                        <label for="name" class="block text-gray-700 text-sm font-bold mb-2">Ваше имя:</label>
-                        <input type="text" id="name" name="name" class="shadow appearance-none border rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Иван Иванов">
-                    </div>
-                    <div class="mb-6">
-                        <label for="phone" class="block text-gray-700 text-sm font-bold mb-2">Номер телефона:</label>
-                        <input type="tel" id="phone" name="phone" class="shadow appearance-none border rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="+7 (XXX) XXX-XX-XX">
-                    </div>
-                    <div class="mb-6">
-                        <label for="message" class="block text-gray-700 text-sm font-bold mb-2">Сообщение (необязательно):</label>
-                        <textarea id="message" name="message" rows="5" class="shadow appearance-none border rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Опишите вашу проблему"></textarea>
-                    </div>
-                    <div class="flex items-center justify-center">
-                        <button type="submit" class="gradient-button text-white font-bold py-3 px-8 rounded-full shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-blue-300">
-                            Отправить заявку
-                        </button>
-                    </div>
-                </form>
-            </div>
+            <h2 class="text-3xl md:text-5xl font-extrabold mb-8 leading-tight">Позвонить нам</h2>
+            <p class="text-lg md:text-xl mb-10 max-w-2xl mx-auto">
+                Готовы ответить на ваши вопросы и помочь с решением проблем.
+                Звоните в любое удобное для вас время!
+            </p>
+            <a href="tel:+78121234567" class="bg-white text-blue-700 font-bold py-4 px-10 rounded-full shadow-lg hover:bg-blue-100 hover:shadow-xl transition-all duration-300 focus:outline-none focus:ring-4 focus:ring-blue-300">
+                <svg class="inline-block w-6 h-6 mr-3 -mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path></svg>
+                +7 (812) 123-45-67
+            </a>
         </div>
     </section>
 
