--- a/phone/index.html
+++ b/phone/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Контакты НССЗ">
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png"> <link rel="icon" href="file:///\\192.168.21.213\SOFT\phone/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png"> <link rel="icon" href="pxl2a11.github.io/phone/icons/icon-192x192.png" type="image/png">
     <style>
         /* Стили CSS для iframe на весь экран */
         html, body {
