--- a/phone/index.html
+++ b/phone/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <iframe src="https://vk.com/" title="Полноэкранный контент">
+    <iframe src="contacts.nssz.local" title="Полноэкранный контент">
         Ваш браузер не поддерживает встроенные фреймы.
     </iframe>
 
