--- a/phone/index.html
+++ b/phone/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <iframe src="http://contacts.nssz.local" title="Полноэкранный контент">
+    <iframe src="file:///\\192.168.21.213\soft\Phone\2.0.html" title="Полноэкранный контент">
         Ваш браузер не поддерживает встроенные фреймы.
     </iframe>
 
