--- a/phone/index.html
+++ b/phone/index.html
@@ -3,47 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список контактов 2.0 | ООО "Невский ССЗ"</title>
-    <link rel="manifest" href="https://pxl2a11.github.io/phone/manifest.json">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Контакты НССЗ">
-    <link rel="apple-touch-icon" href="https://pxl2a11.github.io/phone/icons/icon-192x192.png"> <link rel="icon" href="https://pxl2a11.github.io/phone/icons/icon-192x192.png" type="image/png">
-    <style>
-        /* Стили CSS для iframe на весь экран */
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            display: block;
-        }
-    </style>
+    <title>Список контактов 2.0 | ООО «Невский ССЗ»</title>
+    <!-- Подключение Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Подключение шрифта Roboto из Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!-- Подключение основного CSS файла -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Favicon -->
+    <link rel="icon" href="logo.png" type="image/png">
+    <!-- Подключение манифеста PWA -->
+    <link rel="manifest" href="manifest.json">
 </head>
-<body>
-    <iframe src="file:///D:\SOFT\Phone\2.0.html" title="Полноэкранный контент">
-        Ваш браузер не поддерживает встроенные фреймы.
-    </iframe>
-<script>
-        // Зарегистрируйте сервис-воркер
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('https://pxl2a11.github.io/phone/sw.js')
-                    .then(registration => {
-                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                    })
-                    .catch(err => {
-                        console.log('ServiceWorker registration failed: ', err);
-                    });
-            });
-        }
-    </script>
-    
+<body class="p-4 sm:p-6 lg:p-8">
+    <div class="max-w-4xl mx-auto main-container">
+        <!-- Логотипы и заголовок -->
+        <div class="flex items-center justify-start mb-8 flex-wrap gap-2">
+            <img src="img/logo-osk.png" alt="Логотип ОСК" class="h-16 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/100x64/cccccc/333333?text=OSK';">
+            <img src="img/logo-nssz.png" alt="Логотип Невского ССЗ" class="h-16 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/100x64/cccccc/333333?text=NSSZ';">
+            <div class="flex flex-col items-center sm:items-start">
+                <span class="text-2xl sm:text-3xl font-normal" style="color: var(--dark-grey-text);">Список контактов ООО «Невский ССЗ»</span>
+                <span class="text-sm font-normal" style="color: var(--version-text-color);">ver. 2.0</span>
+            </div>
+        </div>
+
+        <!-- Кнопка переключения темы -->
+        <button id="themeToggle" class="theme-toggle-button">
+            <!-- Иконка солнца из Lucide Icons -->
+            <svg id="sunIcon" class="text-yellow-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: none;">
+                <circle cx="12" cy="12" r="4"/>
+                <path d="M12 2v2"/>
+                <path d="M12 20v2"/>
+                <path d="M4.93 4.93l1.41 1.41"/>
+                <path d="M17.66 17.66l1.41 1.41"/>
+                <path d="M2 12h2"/>
+                <path d="M20 12h2"/>
+                <path d="M4.93 19.07l1.41-1.41"/>
+                <path d="M17.66 6.34l1.41-1.41"/>
+            </svg>
+            <!-- Иконка луны из Lucide Icons -->
+            <svg id="moonIcon" class="text-indigo-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: none;">
+                <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
+            </svg>
+        </button>
+
+        <!-- Фильтр и поиск (закрепленный заголовок) -->
+        <div class="sticky-header rounded-b-xl px-6 pb-4">
+            <!-- Фильтр по отделам (выпадающий список) -->
+            <div class="mb-4">
+                <label for="departmentFilter" class="block text-base font-semibold mb-2 flex items-center">
+                    Фильтр по отделам:
+                    <svg id="sortDepartmentsIcon" class="sort-icon" data-sort-order="default" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="m3 16 4 4 4-4"/>
+                        <path d="M7 20V4"/>
+                        <path d="m21 8-4-4-4 4"/>
+                        <path d="M17 4v16"/>
+                    </svg>
+                </label>
+                <div class="filter-wrapper">
+                    <select id="departmentFilter" class="w-full input-field pr-10 rounded-lg">
+                        <option value="all">Все отделы</option>
+                        <!-- Опции будут добавлены динамически с помощью JavaScript -->
+                    </select>
+                    <button id="clearDepartmentFilter" class="clear-filter-button hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Поле поиска -->
+            <div class="mb-0">
+                <label for="searchInput" class="block text-base font-semibold mb-2">Поиск по контактам:</label>
+                <input type="text" id="searchInput" placeholder="Поиск по контактам..." class="w-full input-field rounded-lg">
+            </div>
+        </div>
+
+        <!-- Контейнер для динамически генерируемых отделов -->
+        <div id="departmentsContainer">
+            <!-- Отделы будут вставлены сюда с помощью JavaScript -->
+        </div>
+    </div>
+
+    <!-- Кнопка "Наверх" -->
+    <button id="scrollToTopBtn" title="Наверх">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="m5 12 7-7 7 7"/>
+            <path d="M12 19V5"/>
+        </svg>
+    </button>
+
+    <!-- Подключение основного JavaScript файла -->
+    <script src="script.js"></script>
 </body>
 </html>
