--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Tailwind CSS -->
     <script src="js/tailwind.js""></script>
     <!-- Библиотека для QR-кодов -->
-    <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+    <script src="js/qrcode.min.js"></script>
     <!-- Наши собственные стили -->
     <link rel="stylesheet" href="css/style.css">
     <script>
