--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <title>Mini Apps</title>
     <!-- Tailwind CSS -->
-    <script src="js/tailwind.js""></script>
+    <script src="js/tailwind.js"></script>
     <!-- Библиотека для QR-кодов -->
     <script src="js/qrcode.min.js"></script>
+
+    <!-- Leaflet.js для интерактивных карт (НОВОЕ) -->
+    <link rel="stylesheet" href="css/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <script src="js/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
     <!-- Наши собственные стили -->
     <link rel="stylesheet" href="css/style.css">
     <script>
