--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Библиотека для QR-кодов -->
     <script src="js/qrcode.min.js"></script>
 
+    <!-- FFmpeg.wasm для обработки аудио (НОВОЕ) -->
+    <script src="js/ffmpeg.min.js"></script>
+
     <!-- Leaflet.js для интерактивных карт (НОВОЕ) -->
     <link rel="stylesheet" href="css/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <script src="js/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
