--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/qrcode.min.js"></script>
 
     <!-- FFmpeg.wasm для обработки аудио (НОВОЕ) -->
-    <script src="js/ffmpeg.min.js"></script>
+    <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js"></script>
 
     <!-- Leaflet.js для интерактивных карт (НОВОЕ) -->
     <link rel="stylesheet" href="css/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
