--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/qrcode.min.js"></script>
 
     <!-- FFmpeg.wasm для обработки аудио (ОБНОВЛЕННАЯ ВЕРСИЯ) -->
-    <script src="js/ffmpeg.min.js" defer></script>
+    <script src="js/ffmpeg.js" defer></script>
 
     <!-- Leaflet.js для интерактивных карт -->
     <link rel="stylesheet" href="css/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
