--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Библиотека для QR-кодов -->
     <script src="js/qrcode.min.js"></script>
 
-    <!-- FFmpeg.wasm для обработки аудио (ОБНОВЛЕННАЯ ВЕРСИЯ) -->
-    <script src="js/ffmpeg.js" defer></script>
+<!-- Библиотека для кодирования в MP3 (НОВОЕ) -->
+    <script src="js/lame.min.js"></script>
 
     <!-- Leaflet.js для интерактивных карт -->
     <link rel="stylesheet" href="css/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
