--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <!-- Tailwind CSS -->
     <script src="js/tailwind.js"></script>
 
-<!-- Библиотека для кодирования в MP3 (НОВОЕ) -->
+    <!-- Библиотека для кодирования в MP3 (НОВОЕ) -->
     <script src="js/lame.min.js"></script>
 
     <!-- Leaflet.js для интерактивных карт -->
     <link rel="stylesheet" href="css/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <script src="js/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
+    <!-- Библиотека для генерации QR-кодов (подключена статически) -->
+    <script src="js/qrcode.min.js"></script>
 
     <!-- Наши собственные стили -->
     <link rel="stylesheet" href="css/style.css">
