--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- Библиотека для кодирования в MP3 (НОВОЕ) -->
     <script src="js/lame.min.js"></script>
+    <!-- Библиотека для сканирования QR-кодов (НОВОЕ) -->
+<script src="js/jsQR.min.js"></script>
 
     <!-- Leaflet.js для интерактивных карт -->
     <link rel="stylesheet" href="css/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
